--- a/.github/workflows/release-modules.yml
+++ b/.github/workflows/release-modules.yml
@@ -1,12 +1,8 @@
 # Copyright MediaZ Teknoloji A.S. All Rights Reserved.
 
-# This is a basic workflow to help you get started with Actions
-
 name: Release Modules
 
-# Controls when the workflow will run
 on:
-  # Allows you to run this workflow manually from the Actions tab
   workflow_call:
     inputs:
       ref_name:
@@ -40,7 +36,6 @@ env:
   DIST_TARGET_DIR: "D:/Builds/Nodos-Modules"
   SYSTEM_NOSMAN_PATH: "C:/Tools/nosman.exe"
   RUST_BACKTRACE: 1
-  BUILD_NUMBER_STARTS_AT: 551 # Repo split point
   NOSMAN_EXECUTABLE_NAME: "nosman.exe"
 
 # TODO: Support parallel runs
@@ -48,10 +43,9 @@ concurrency:
   group: single # For now, allow 1 run at a time.
   cancel-in-progress: false # Queue up runs if one is already in progress.
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
-    name: Build & Publish (${{ github.event.inputs.ref_name }} - ${{ github.event.inputs.build_number }})
+    name: Build & Publish (${{ inputs.ref_name }} - ${{ inputs.build_number }})
     runs-on: self-hosted
     steps:
       - name: Update Git Credentials
@@ -62,17 +56,17 @@ jobs:
 
       - name: Clean Build
         shell: pwsh
-        if: ${{ github.event.inputs.clean }}
+        if: ${{ inputs.clean }}
         run: |
-          if (Test-Path -Path ./modules-${{ github.event.inputs.ref_name }}) { Remove-Item -Path ./modules-${{ github.event.inputs.ref_name }} -Recurse -Force }
+          if (Test-Path -Path ./modules-${{ inputs.ref_name }}) { Remove-Item -Path ./modules-${{ inputs.ref_name }} -Recurse -Force }
 
       - name: Setup Work Folder
         shell: pwsh
         run: |
-          if (-not (Test-Path -Path ./modules-${{ github.event.inputs.ref_name }})) { New-Item -Path ./modules-${{ github.event.inputs.ref_name }} -ItemType Directory -Force }
+          if (-not (Test-Path -Path ./modules-${{ inputs.ref_name }})) { New-Item -Path ./modules-${{ inputs.ref_name }} -ItemType Directory -Force }
 
       - name: Setup Nodos Workspace (Latest)
-        if: ${{ github.event.inputs.nodos_sdk_version == '' }}
+        if: ${{ inputs.nodos_sdk_version == '' }}
         run: |
           if (-not (Test-Path -Path ./workspace)) {
             ${{ env.SYSTEM_NOSMAN_PATH }} --workspace ./workspace get
@@ -84,74 +78,74 @@ jobs:
           echo "Updating system nosman"
           Copy-Item -Path ./workspace/${{ env.NOSMAN_EXECUTABLE_NAME }} -Destination ${{ env.SYSTEM_NOSMAN_PATH }} -Force
         shell: pwsh
-        working-directory: modules-${{ github.event.inputs.ref_name }}
+        working-directory: modules-${{ inputs.ref_name }}
 
       - name: Setup Nodos Workspace (Specific Version)
-        if: ${{ github.event.inputs.nodos_sdk_version != '' }}
+        if: ${{ inputs.nodos_sdk_version != '' }}
         run: |
-          ${{ env.SYSTEM_NOSMAN_PATH }} --workspace ./workspace get --version "${{ github.event.inputs.nodos_sdk_version }}"
+          ${{ env.SYSTEM_NOSMAN_PATH }} --workspace ./workspace get --version "${{ inputs.nodos_sdk_version }}"
         shell: pwsh
-        working-directory: modules-${{ github.event.inputs.ref_name }}
+        working-directory: modules-${{ inputs.ref_name }}
 
       - name: Checkout
         shell: pwsh
         run: |
           if (-not (Test-Path -Path ./modules-repo)) {
-            git clone --branch ${{ github.event.inputs.ref_name }} --depth 1 https://github.com/${{ github.repository }}.git --recurse-submodule --shallow-submodules ./modules-repo
+            git clone --branch ${{ inputs.ref_name }} --depth 1 https://github.com/${{ github.repository }}.git --recurse-submodule --shallow-submodules ./modules-repo
           }
           cd ./modules-repo
           git fetch origin
-          git checkout ${{ github.event.inputs.ref_name }}
+          git checkout ${{ inputs.ref_name }}
           git clean -ffd
           git restore .
           git pull --force
           git submodule update --force --recursive --init
           git fetch --tags
           git status
-        working-directory: modules-${{ github.event.inputs.ref_name }}/workspace/Module
+        working-directory: modules-${{ inputs.ref_name }}/workspace/Module
 
       - name: Setup Git
         run: |
           git config user.email "${{ env.GIT_EMAIL }}"
           git config user.name "${{ env.GH_USERNAME }}"
-        working-directory: modules-${{ github.event.inputs.ref_name }}/workspace/Module/modules-repo
+        working-directory: modules-${{ inputs.ref_name }}/workspace/Module/modules-repo
   
       - name: Update Nosman Cache
         shell: pwsh
         run: |
           ./${{ env.NOSMAN_EXECUTABLE_NAME }} rescan --fetch-index
-        working-directory: modules-${{ github.event.inputs.ref_name }}/workspace
+        working-directory: modules-${{ inputs.ref_name }}/workspace
 
       - name: Configure
         shell: pwsh
         run: |
           cmake -S ./Toolchain/CMake -B ../Project -DCMAKE_BUILD_TYPE=Release
-        working-directory: modules-${{ github.event.inputs.ref_name }}/workspace
+        working-directory: modules-${{ inputs.ref_name }}/workspace
 
       - name: Build
         shell: pwsh
         run: |
           cmake --build ../Project --config Release -j 8
-        working-directory: modules-${{ github.event.inputs.ref_name }}/workspace
+        working-directory: modules-${{ inputs.ref_name }}/workspace
 
       - name: Release (Changed)
-        if: ${{ github.event.inputs.build_all == null || github.event.inputs.build_all == 'false'}}
+        if: ${{ inputs.build_all == null || inputs.build_all == 'false'}}
         shell: pwsh
         run: |
-          $LastBuildTag = git for-each-ref --sort=-v:refname --format='%(refname:short)' 'refs/tags/build.${{ github.event.inputs.ref_name }}-*' | Select-Object -First 1
+          $LastBuildTag = git for-each-ref --sort=-v:refname --format='%(refname:short)' 'refs/tags/build.${{ inputs.ref_name }}-*' | Select-Object -First 1
           echo "Last build tag is $LastBuildTag"
-          ../../${{ env.NOSMAN_EXECUTABLE_NAME }} --workspace ../../ publish-batch --repo-path . --compare-with="$LastBuildTag" --vendor Nodos --version-suffix ".b${{ github.event.inputs.build_number }}" --verbose --publisher-name "${{ env.GH_USERNAME }}" --publisher-email "${{ env.GIT_EMAIL }}"
-        working-directory: modules-${{ github.event.inputs.ref_name }}/workspace/Module/modules-repo
+          ../../${{ env.NOSMAN_EXECUTABLE_NAME }} --workspace ../../ publish-batch --repo-path . --compare-with="$LastBuildTag" --vendor Nodos --version-suffix ".b${{ inputs.build_number }}" --verbose --publisher-name "${{ env.GH_USERNAME }}" --publisher-email "${{ env.GIT_EMAIL }}"
+        working-directory: modules-${{ inputs.ref_name }}/workspace/Module/modules-repo
       
       - name: Release (All)
-        if: ${{ github.event.inputs.build_all == 'true' }}
+        if: ${{ inputs.build_all == 'true' }}
         shell: pwsh
         run: |
-          ../../${{ env.NOSMAN_EXECUTABLE_NAME }} --workspace ../../ publish-batch --repo-path . --vendor=Nodos --version-suffix ".b${{ github.event.inputs.build_number }}" --verbose --publisher-name "${{ env.GH_USERNAME }}" --publisher-email "${{ env.GIT_EMAIL }}"
-        working-directory: modules-${{ github.event.inputs.ref_name }}/workspace/Module/modules-repo
+          ../../${{ env.NOSMAN_EXECUTABLE_NAME }} --workspace ../../ publish-batch --repo-path . --vendor=Nodos --version-suffix ".b${{ inputs.build_number }}" --verbose --publisher-name "${{ env.GH_USERNAME }}" --publisher-email "${{ env.GIT_EMAIL }}"
+        working-directory: modules-${{ inputs.ref_name }}/workspace/Module/modules-repo
       
       - name: Tag
         run: |
-          git tag -a "build.${{ github.event.inputs.ref_name }}-${{ github.event.inputs.build_number }}" -m "Build ${{ github.event.inputs.ref_name }}-${{ github.event.inputs.build_number }}"
-          git push origin "build.${{ github.event.inputs.ref_name }}-${{ github.event.inputs.build_number }}"
-        working-directory: modules-${{ github.event.inputs.ref_name }}/workspace/Module/modules-repo
+          git tag -a "build.${{ inputs.ref_name }}-${{ inputs.build_number }}" -m "Build ${{ inputs.ref_name }}-${{ inputs.build_number }}"
+          git push origin "build.${{ inputs.ref_name }}-${{ inputs.build_number }}"
+        working-directory: modules-${{ inputs.ref_name }}/workspace/Module/modules-repo
