Use string instead of number for build_number

--- a/.github/workflows/release-modules.yml
+++ b/.github/workflows/release-modules.yml
@@ -26,8 +26,8 @@ on:
       build_number:
         description: 'Build number'
         required: false
-        default: 0
-        type: number
+        default: '0'
+        type: string
 
 env:
   GH_USERNAME: "nodos-bot"
