--- a/.github/workflows/release-modules.yml
+++ b/.github/workflows/release-modules.yml
@@ -31,11 +31,11 @@ on:
 
 jobs:
   build:
-    runs-on: [self-hosted, Windows]
     strategy:
       matrix:
         runner: [[self-hosted, Windows, "${{ inputs.ref_name }}"], [self-hosted, Linux, "${{ inputs.ref_name }}"]]
     name: "${{ inputs.ref_name }} - ${{ inputs.build_number }} (${{ matrix.runner[1] }})"
+    runs-on: ${{ matrix.runner }}
 
     env:
       GH_USERNAME: "nodos-bot"
