Do not cancel other matrix jobs if one of them failed

--- a/.github/workflows/release-modules.yml
+++ b/.github/workflows/release-modules.yml
@@ -34,6 +34,7 @@ jobs:
     strategy:
       matrix:
         runner: [[self-hosted, Windows, "${{ inputs.ref_name }}"], [self-hosted, Linux, "${{ inputs.ref_name }}"]]
+      fail-fast: false
     name: "${{ inputs.ref_name }} - ${{ inputs.build_number }} (${{ matrix.runner[1] }})"
     runs-on: ${{ matrix.runner }}
 
