Be sure to don't sign on dev runner

--- a/.github/workflows/release-modules.yml
+++ b/.github/workflows/release-modules.yml
@@ -143,7 +143,7 @@ jobs:
         working-directory: modules-${{ inputs.ref_name }}/workspace
 
       - name: Sign Binaries
-        if: ${{ inputs.sign_binaries && matrix.runner[1] == 'Windows' }}
+        if: ${{ inputs.sign_binaries && matrix.runner[1] == 'Windows' && inputs.ref_name != 'dev' }}
         run: |            
           cd /d %MEDIAZ_CERTIFICATES_DIR% && python sign_module.py ${{ github.workspace }}/modules-${{ inputs.ref_name }}/workspace/Module/modules-repo
         shell: bash
