--- a/.github/workflows/release-modules.yml
+++ b/.github/workflows/release-modules.yml
@@ -67,7 +67,8 @@ jobs:
         continue-on-error: true
         shell: bash
         run: |
-          git credential-manager github login --username ${{ env.GH_USERNAME }} --token ${{ env.GH_TOKEN }} --force
+          git credential-manager github login --username ${{ env.GH_USERNAME }} --token ${{ secrets.CI_TOKEN }} --force
+
 
       - name: Clean Build
         shell: pwsh
