--- a/.github/workflows/release-modules.yml
+++ b/.github/workflows/release-modules.yml
@@ -33,6 +33,11 @@ on:
         required: false
         default: false
         type: boolean
+      release_notes:
+        description: 'Release notes'
+        required: false
+        default: ''
+        type: string
 
 jobs:
   build:
@@ -149,20 +154,50 @@ jobs:
           cd /d %MEDIAZ_CERTIFICATES_DIR% && python sign_module.py ${{ github.workspace }}/modules-${{ inputs.ref_name }}/workspace/Module/modules-repo
         shell: bash
 
-      - name: Release (Changed)
-        if: ${{ inputs.release_all == null || inputs.release_all == false }}
+      - name: Publish (Changed)
+        if: ${{ inputs.release_all == null || inputs.release_all == 'false' }}
         shell: pwsh
         run: |
+          if (${{ matrix.runner[1] }} -eq "Windows") {
+            $RELEASE_NOTES = @"
+            ${{ github.event.inputs.release_notes }}
+            Binaries signed: ${{ github.event.inputs.sign }}
+            "@
+          } else {
+            $RELEASE_NOTES = ${{ github.event.inputs.release_notes }}
+          }
+
           $LastBuildTag = git for-each-ref --sort=-v:refname --format='%(refname:short)' 'refs/tags/${{ env.TAG_NAME_PREFIX }}-*' | Select-Object -First 1
-          echo "Last build tag is $LastBuildTag"
-          ../../${{ env.NOSMAN_EXECUTABLE_NAME }} --workspace ../../ publish-batch --repo-path . --compare-with="$LastBuildTag" --vendor Nodos --version-suffix ".b${{ inputs.build_number }}" --verbose --publisher-name "${{ env.GH_USERNAME }}" --publisher-email "${{ env.GIT_EMAIL }}" --tag "${{ inputs.ref_name }}"
+          Write-Host "Last build tag is $LastBuildTag"
+
+          ../../${{ env.NOSMAN_EXECUTABLE_NAME }} `
+            --workspace ../../ `
+            publish-batch `
+            --repo-path . `
+            --compare-with="$LastBuildTag" `
+            --vendor Nodos `
+            --version-suffix ".b${{ inputs.build_number }}" `
+            --verbose `
+            --publisher-name "${{ env.GH_USERNAME }}" `
+            --publisher-email "${{ env.GIT_EMAIL }}" `
+            --tag "${{ inputs.ref_name }}" `
+            --release-notes "$RELEASE_NOTES"
         working-directory: modules-${{ inputs.ref_name }}/workspace/Module/modules-repo
-      
-      - name: Release (All)
+
+      - name: Publish (All)
         if: ${{ inputs.release_all }}
         shell: pwsh
         run: |
-          ../../${{ env.NOSMAN_EXECUTABLE_NAME }} --workspace ../../ publish-batch --repo-path . --vendor=Nodos --version-suffix ".b${{ inputs.build_number }}" --verbose --publisher-name "${{ env.GH_USERNAME }}" --publisher-email "${{ env.GIT_EMAIL }}" --tag "${{ inputs.ref_name }}"
+          if (${{ matrix.runner[1] }} -eq "Windows") {
+            $RELEASE_NOTES = @"
+            ${{ github.event.inputs.release_notes }}
+            Binaries signed: ${{ github.event.inputs.sign }}
+            "@
+          } else {
+            $RELEASE_NOTES = ${{ github.event.inputs.release_notes }}
+          }
+            
+          ../../${{ env.NOSMAN_EXECUTABLE_NAME }} --workspace ../../ publish-batch --repo-path . --vendor=Nodos --version-suffix ".b${{ inputs.build_number }}" --verbose --publisher-name "${{ env.GH_USERNAME }}" --publisher-email "${{ env.GIT_EMAIL }}" --tag "${{ inputs.ref_name }}" --release-notes "$RELEASE_NOTES"
         working-directory: modules-${{ inputs.ref_name }}/workspace/Module/modules-repo
       
       - name: Tag
