--- a/.github/workflows/release-modules.yml
+++ b/.github/workflows/release-modules.yml
@@ -158,7 +158,7 @@ jobs:
         if: ${{ inputs.release_all == null || inputs.release_all == 'false' }}
         shell: pwsh
         run: |
-          if (${{ matrix.runner[1] }} -eq "Windows") {
+          if ("${{ matrix.runner[1] }}" -eq "Windows") {
             $RELEASE_NOTES = "@
             ${{ github.event.inputs.release_notes }}
             Binaries signed: ${{ github.event.inputs.sign }} @"
@@ -187,13 +187,12 @@ jobs:
         if: ${{ inputs.release_all }}
         shell: pwsh
         run: |
-          if (${{ matrix.runner[1] }} -eq "Windows") {
-            $RELEASE_NOTES = @"
+          if ("${{ matrix.runner[1] }}" -eq "Windows") {
+            $RELEASE_NOTES = "@
             ${{ github.event.inputs.release_notes }}
-            Binaries signed: ${{ github.event.inputs.sign }}
-            "@
+            Binaries signed: ${{ github.event.inputs.sign }} @"
           } else {
-            $RELEASE_NOTES = ${{ github.event.inputs.release_notes }}
+            $RELEASE_NOTES = "${{ github.event.inputs.release_notes }}"
           }
 
           ../../${{ env.NOSMAN_EXECUTABLE_NAME }} --workspace ../../ publish-batch --repo-path . --vendor=Nodos --version-suffix ".b${{ inputs.build_number }}" --verbose --publisher-name "${{ env.GH_USERNAME }}" --publisher-email "${{ env.GIT_EMAIL }}" --tag "${{ inputs.ref_name }}" --release-notes "$RELEASE_NOTES"
