--- a/.github/workflows/release-modules.yml
+++ b/.github/workflows/release-modules.yml
@@ -151,7 +151,8 @@ jobs:
       - name: Sign Binaries
         if: ${{ inputs.sign_binaries && matrix.runner[1] == 'Windows' && inputs.ref_name != 'dev' }}
         run: |            
-          cd /d %MEDIAZ_CERTIFICATES_DIR% && python sign_module.py ${{ github.workspace }}/modules-${{ inputs.ref_name }}/workspace/Module/modules-repo
+          cd /d "%MEDIAZ_CERTIFICATES_DIR%"
+          python sign_module.py ${{ github.workspace }}/modules-${{ inputs.ref_name }}/workspace/Module/modules-repo
         shell: bash
 
       - name: Publish (Changed)
