--- a/.github/workflows/release-modules.yml
+++ b/.github/workflows/release-modules.yml
@@ -151,7 +151,7 @@ jobs:
       - name: Sign Binaries
         if: ${{ inputs.sign_binaries && matrix.runner[1] == 'Windows' && inputs.ref_name != 'dev' }}
         run: |            
-          cd "%MEDIAZ_CERTIFICATES_DIR%"
+          cd $MEDIAZ_CERTIFICATES_DIR
           python sign_module.py ${{ github.workspace }}/modules-${{ inputs.ref_name }}/workspace/Module/modules-repo
         shell: bash
 
