CD: Deserialize strategy matrix runner input from step output

--- a/.github/workflows/release-modules.yml
+++ b/.github/workflows/release-modules.yml
@@ -78,7 +78,7 @@ jobs:
   build:
     strategy:
       matrix:
-        runner: ${{ needs.prepare-strategy.outputs.runner-list }}
+        runner: ${{ fromJson(needs.prepare-strategy.outputs.runner-list) }}
       fail-fast: false
     name: "${{ inputs.ref_name }} - ${{ inputs.build_number }} (${{ matrix.runner[1] }})"
     needs: prepare-strategy
