Use string type for publish mode in workflow_call

--- a/.github/workflows/modules.yml
+++ b/.github/workflows/modules.yml
@@ -9,13 +9,8 @@ on:
         required: true
         type: string
       publish_mode:
-        type: choice
-        description: 'Publish Mode'
-        options:
-          - Only Changed
-          - All Modules
-          - None
-        required: false
+        type: string
+        description: 'Publish Mode. Options: Only Changed, All Modules, None'
         default: 'Only Changed'
       nodos_sdk_version:
         description: 'Nodos SDK Version'
