--- a/.github/workflows/modules.yml
+++ b/.github/workflows/modules.yml
@@ -90,7 +90,7 @@ jobs:
       matrix:
         runner: ${{ fromJson(needs.prepare-strategy.outputs.runner-list) }}
       fail-fast: false
-    name: "${{ inputs.ref_name }} - ${{ inputs.build_number }} (${{ matrix.runner[1] }})"
+    name: "${{ inputs.ref_name }} - ${{ inputs.build_number }} (${{ matrix.runner[1] }}) ${{ inputs.publish_mode != 'None' && ' (Publishing)'}}"
     needs: prepare-strategy
     runs-on: ${{ matrix.runner }}
 
