--- a/.github/workflows/modules.yml
+++ b/.github/workflows/modules.yml
@@ -76,7 +76,11 @@ jobs:
         id: windows-step
         shell: bash
         run: |
-          echo "runner-list=['self-hosted', 'Windows', '${{ inputs.ref_name }}']" >> $GITHUB_OUTPUT
+          if [ "${{ github.event.inputs.sign_binaries }}" == "true" ]; then
+            echo "runner-list=['self-hosted', 'Windows', '${{ inputs.ref_name }}', 'signer']" >> $GITHUB_OUTPUT
+          else
+            echo "runner-list=['self-hosted', 'Windows', '${{ inputs.ref_name }}']" >> $GITHUB_OUTPUT
+          fi
         if: ${{ inputs.windows }}
       - name: Set Output
         id: result-step
