--- a/.github/workflows/modules.yml
+++ b/.github/workflows/modules.yml
@@ -147,12 +147,10 @@ jobs:
           }
           cd ./modules-repo
           git fetch origin
-          git checkout ${{ inputs.ref_name }}
+          get fetch --tags
           git clean -ffd
-          git restore .
-          git pull --force
-          git fetch --tags
           git checkout ${{ github.sha }}
+          gut clean -ffd
           git submodule update --force --recursive --init
           git status
         working-directory: modules-${{ inputs.ref_name }}/workspace/Module
